--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "postcss-preset-env": "^7.8.3",
     "vue": "^3.2.45",
     "vue-backtotop": "^1.6.1",
-    "vue-google-map": "^0.0.1",
     "vue-router": "^4.1.6",
     "vue3-autocounter": "^1.0.6",
-    "vue3-google-map": "^0.20.0"
+    "vue3-google-map": "^0.20.0",
+    "vue3-lazyload": "^0.3.8"
   },
   "devDependencies": {
     "@vue/cli-service": "~5.0.8",
