--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vue/cli-plugin-babel": "^5.0.8",
     "@vue/cli-plugin-eslint": "^5.0.8",
     "@vue/cli-plugin-router": "^5.0.8",
+    "axios": "^1.7.9",
     "core-js": "^3.27.2",
     "feather-icons": "^4.29.0",
     "postcss-flexbugs-fixes": "^5.0.2",
